# osmpdrum

./: App.tsx  README.md  build.cmd  index.html  metadata.json  package.json  types.ts  vite.config.ts
components/: EffectsRack.tsx  Knob.tsx  PadGrid.tsx  WaveformDisplay.tsx
host/: Cargo.toml
host/src/: main.rs
src/: App.tsx  index.tsx  types.ts  vite-env.d.ts
src/components/: ContextMenu.tsx  Dialog.tsx  DropdownMenu.tsx  EffectsRack.tsx  Knob.tsx  MenuSelect.tsx  PadGrid.tsx  Sidebar.tsx  VUMeter.tsx  WaveformDisplay.tsx
src/lib/: audioEngine.ts
src/styles/: index.css
