[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
cpal = { version = "0.17.1" }
hound = "3.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8.23"
winit = "0.30.12"
wry = "0.54.2"

windows-sys = { version = "0.52.0", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging"
] }

[features]
default = []
asio = ["cpal/asio"]

